# nex_cafe_server

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.css  tray.rc
ISSUE_TEMPLATE/: 1-Bug_report.md  3-Feature_request.md
assets/: tailwind.css
src/: main.rs
src/api/: api.rs  mod.rs  session.rs
src/api/constant/: http_status_phrases.rs  mod.rs
src/api/db/: mod.rs  seed.rs  setup.rs
src/api/migration/: m2025_11_20.rs  mod.rs
src/api/routes/: health.rs  mod.rs
src/api/routes/auth/: login.rs
src/api/utils/: hash.rs
src/shared/: constants.rs
src/shared/utils/: logging.rs
src/ui/: mod.rs
src/ui/features/home/components/: mod.rs  signin_form.rs
src/ui/middleware/: role_middleware.rs
src/ui/models/: login_model.rs
src/ui/routes/: dashboard.rs  home.rs
src/ui/shared/: mod.rs
src/ui/shared/components/: navbar.rs
src/ui/shared/http/: mod.rs
src/ui/shared/utils/: mod.rs  setup_tray.rs  webview.rs
