[package]
name = "nex_cafe_server"
version = "0.0.0"
authors = ["cr3wcr3w <racelisjk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tray-item = "0.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
embed-resource = "3.0.6"
