[package]
name = "nex_cafe_server"
version = "0.0.0"
authors = ["cr3wcr3w <racelisjk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
axum_session = "0.17.1"
axum_session_auth = "0.17.0"
axum_session_sqlx = { version = "0.6.1", features = ["sqlite", "tls-rustls"] }
bcrypt = "0.17.1"
chrono = "0.4.42"
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-router = "0.7.1"
dirs = "6.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["full"]}

tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tray-item = "0.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
embed-resource = "3.0.6"
